# autism2

./: CMakeLists.txt  cube.cpp  cube.hpp  main.cpp
